--- a/src/App.css
+++ b/src/App.css
@@ -51,10 +51,35 @@ input {
   border-radius: 0;
 }
 
+.remove-btn {
+  background-color: #fff;
+  color:rgb(0, 0, 0);
+  border: 1px solid black;
+  border-radius: 0;
+  margin-left: 2rem;
+}
+
 .task-list {
   color: black;
+  margin-top: 20px;
 }
 
 .task {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 40%;
+  padding: 8px;
+}
+
+.filter-buttons {
+  margin-top: 1rem;
+}
+
+.filter-btn {
+  background-color: #fff;
+  color:rgb(0, 0, 0);
+  border: 1px solid black;
+  border-radius: 0;
 }
